# Eugenia

./: .editorconfig  .env.example  .gitignore  .gitmodules  .output.txt  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.improved  Eugenia.py  Eugenia_v0.py  IMPROVEMENTS_SUMMARY.md  LICENSE.md  Makefile  Nemotron.json  QWEN.md  README.md  ascii_pyramid.py  bench_recursive.py  check_single_function.py  config.yaml  cosmic_formatter_backup.py  extract_weights.py  generate.py  generate_all.py  generate_all_cmyk.py  generate_all_png.py  list_functions.py  pyproject.toml  pyramid.json  pyramid_need_to_merge_this.json  pyramid_synthesized.json  Выборка «Python3.14».txt  Выборка «Python».txt
.devcontainer/: devcontainer.json
.junie/: AGENTS.md  system_prompt_ru.md
.tasks/: analysis.md  refactor-algebra
NEED_REWRITE/: COMPRESSION_SUMMARY.md  EUGENIA_ARCHITECTURE.md  correlation_compressor.py  deterministic_core.py  eugenia_duality.py  eugenia_graphics.py  eugenia_knowledge_system.py  eugenia_model_patterns.py  eugenia_unified.py  fractal_compressor.py  knowledge_graph.py  universal_geometric_classifier.py  universal_knowledge_map.py  universal_knowledge_protocol.py
Tester/: README.md  Tester.ipynb  codata_parser.py  compute_all_constants.py  formulas_registry.yaml  lhc_parser.py
_bmad/: .cc-ai-toolkit.json  config.toml  config.user.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: _meta.ts  getting-started.md  visualizations.md
plan/: 01_p0_default_args.md  02_p0_code_substitution.md  03_p0_compile_exec_codegen.md  04_p0_sys_modules_patch.md  05_p1_inline_delta_field.md  06_p1_inline_spine_functions.md  07_p1_marshal_cache.md  08_p2_dual_path_architecture.md  09_p2_nucleus_and_cli_integration.md  10_p2_p3_optimize_remaining_and_benchmarks.md  data-pipeline-experiments.md  experiments_plan.md  final-plan-v3.md  llama-server-analysis.md  optimization-plan-v2.md  optimization-planning.md  virtual-container-data-pipeline-experiments.md  virtual-container-experiments.md  vscode-removal-plan.md
research/: COMPRESSION_SUMMARY.md  EUGENIA_ARCHITECTURE.md  UNIVERSAL_KNOWLEDGE.md  __init__.py  correlation_compressor.py  cross_layer_compressor.py  deterministic_core.py  deterministic_knowledge.py  eugenia_duality.py  eugenia_graphics.py  eugenia_hybrid.py  eugenia_seed_system.py  (+10 more)
(+566 files in other folders)
