[project]
name = "Nucleus"
version = "0.1.0"
description = "Delta field visualizations for MNIST, PNG, and CMYK data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "Pillow",
  "torch",
  "tqdm",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mpl",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
