[project]
name = "Eugenia"
version = "0.1.0"
description = "Eugene & Eugenia = εὐγενής"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "Pillow",
  "torch",
  "tqdm",
  "scikit-learn",
  "safetensors",
  "flask"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mpl",
  "ruff",
  "mypy",
  "jupyterlab",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
